--- a/gradle.properties
+++ b/gradle.properties
@@ -3,27 +3,27 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop/
-	minecraft_version=1.19-pre3
-	yarn_mappings=4
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.28
 	tiny_version=2
-	loader_version=0.13.3
+	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.1.1
+	mod_version = 1.1.2
 	maven_group = com.shnupbups
 	mod_name = piglib
-	version_meta = fabric-mc1.19
+	version_meta = fabric-mc1.19.2
 
 # Dependencies
 	# check on https://fabricmc.net/develop/
-	fapi_version=0.53.4+1.19
+	fabric_version=0.76.0+1.19.2
 
 # Other Stuff
 	# check on maven at https://maven.shedaniel.me/me/shedaniel/RoughlyEnoughItems-fabric/
-	rei_version = 9.0.466
+	rei_version = 9.1.601
 
 	# check on maven at https://maven.shedaniel.me/dev/architectury/architectury-fabric/
-	arch_version = 5.4.14
+	arch_version = 6.5.85
 
 	# check on maven at https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu/
-	modmenu_version = 4.0.0-beta.4
+	modmenu_version = 4.2.0-beta.2
