fix gradlew issues

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/develop/
 	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.28
+	yarn_mappings=28
 	tiny_version=2
 	loader_version=0.14.21
 
